# backend/docs/swagger.json
@@ -157,7 +157,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/server.AddTransactionFormat"
+                            "$ref": "#/definitions/server.InsertTransactionFormat"
                         }
                     }
                 ],
@@ -203,7 +203,7 @@
         }
     },
     "definitions": {
-        "server.AddTransactionFormat": {
+        "server.InsertTransactionFormat": {
             "type": "object",
             "required": [
                 "amount",
